# data-synthesizer

./: .env  .gitignore  CLAUDE.md  README.md  demo_notebook.ipynb  draft.txt  gemini_util.py  main.py  opencode.json  pyproject.toml  run_config.json  scenario_parser.py  schema_generator.py  synthetic_data_generator.py  test_stability.py  validate_submission.py
assignment/: candidate_assignment_data_synthesizer.md  example_data_scenarios.md  grading_rubric_data_synthesizer.md
biz_logic/: cloude-implementation-plan.md
docs/: SEMANTIC_PATTERNS.md  business_logic.md  expected_deliverables.md  submission_hardening_plan.md
output/: crm.json
output/synthetic/: accounts.csv  customers.csv  interactions.csv  products.csv  summary.json
scripts/: benchmark_generation.py
src/: __init__.py  reporting.py
src/gen_config/: __init__.py  business_logic.md  config_generator.py  config_validator.py  pattern_matcher.py
src/gen_data/: __init__.py  behavioral_mapping.py  config_validator.py  data-generation-plan.md  data_generator.py  engine.py  (+10 more)
synthgen/: __init__.py  common.py  engine.py  relationship_rules.py  reporting.py  schema_generator.py  schema_loader.py  schema_models.py  schema_utils.py  values.py  writers.py
tests/: eda_submission.py  test_business_days.py  test_data_generator.py  test_data_generator_debug.py  test_e2e.py  test_gen_data_examples.py  test_pattern_matcher.py  test_sample_output.py  test_stability.py  test_translate.py  test_value_generators_inheritance.py  test_value_generators_xml.py  test_values_xml.py  validate_output.py  validate_submission.py
(+41 files in other folders)
