[project]
name = "data-synthesizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deltalake>=1.5.0",
    "faker>=40.11.0",
    "google-genai>=1.68.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pyarrow>=23.0.1",
    "pydantic>=2.11.0",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
]
